# C2-chessengine

./: !  #.gitignore#  .gitignore  C2Config.h.in  C2_log_2021-08-12-20:52:43.txt  CMakeLists.txt  FEN_test_positions.txt  LICENSE  README  fil  fil2
Testing/: TAG
Testing/20240128-0953/: Test.xml
Testing/20240128-0958/: Test.xml
Testing/20240128-1100/: Test.xml
positions/: pos1.pgn  pos11.pgn  pos3.pgn  pos4.pgn  pos5.pgn  pos7.pgn  pos8.pgn
src/: Bitboard.cpp  Bitboard.hpp  Bitboard_make_move.cpp  Bitboard_with_utils.cpp  Bitboard_with_utils.hpp  C2.cpp  C2_unittest.hpp  C2_untittest.cpp  CMakeLists.txt  CMakeLists_backup.txt  Config_param.hpp  backtrace.cpp  backtrace.hpp  bitboard.cpp  bitboard.hpp  bitboard_make_move.cpp  bitboard_movegen.cpp  bitboard_with_utils.cpp  bitboard_with_utils.hpp  board.cpp  board.hpp  castle_state.cpp  castle_state.hpp  castling_state.cpp  castling_state.hpp  chessfuncs.cpp  chessfuncs.hpp  chesstypes.hpp  circular_fifo.hpp  cmd_line.cpp  config_param.hpp  current_time.hpp  file.cpp  file.hpp  game.cpp  game.hpp  game_history.hpp  makefile  mate_in.cpp  move.cpp  (+28 more)
test_positions/: FEN_test_positions.txt  testpos1.pgn  testpos14.pgn  testpos15.pgn  testpos18.pgn  testpos2.pgn  testpos20.pgn  testpos21.pgn  testpos23.pgn  testpos28.pgn  testpos29.pgn  testpos3.pgn  testpos30.pgn  testpos31.pgn  testpos35.pgn  testpos37.pgn  testpos40.pgn  testpos41.pgn  testpos49.pgn  testpos5.pgn  testpos50.pgn  testpos53.pgn  testpos58.pgn  testpos59.pgn  testpos6.pgn  testpos62.pgn  testpos63.pgn
tests/: CMakeLists.txt  test.cpp
tests/test_positions/: FEN_test_positions.txt  perftsuite.epd  testpos10.pgn  testpos100.pgn  testpos101.pgn  testpos102.pgn  testpos11.pgn  testpos12.pgn  testpos13.pgn  testpos16.pgn  testpos17.pgn  testpos19.pgn  testpos22.pgn  testpos24.pgn  testpos25.pgn  testpos26.pgn  testpos27.pgn  testpos32.pgn  testpos33.pgn  testpos34.pgn  testpos36.pgn  testpos38.pgn  testpos39.pgn  testpos4.pgn  testpos42.pgn  testpos46.pgn  testpos52.pgn  testpos54.pgn  testpos56.pgn  testpos65.pgn  testpos67.pgn  testpos7.pgn  testpos70.pgn  testpos71.pgn  testpos72.pgn  testpos73.pgn  testpos74.pgn  testpos75.pgn  testpos76.pgn  testpos77.pgn  (+24 more)
